# Yukine-android

./: .gitignore  README.md  build.gradle  design-qa.md  gradle.properties  memory_phase2_proposed_update.md  settings.gradle  ui_layout_playing.xml  操作逻辑优化方案.md
.codex/environments/: environment.toml
.github/workflows/: android.yml  junto-mobile.yml  metadata-gateway-container.yml  metadata-gateway.yml  release.yml
.qoder/repowiki/knowledge/zh/: _index.yaml
.qoder/repowiki/knowledge/zh/Android 原生日志与崩溃记录（无统一日志框架）/: Android 原生日志与崩溃记录（无统一日志框架）.md
.qoder/repowiki/knowledge/zh/Gradle 多模块构建与 CI_发布流水线/: Gradle 多模块构建与 CI_发布流水线.md
.qoder/repowiki/knowledge/zh/YUKINE Android 多模块工程根（含元数据网关与 Web 原型）/: _module.yaml  架构设计.md  概述.md
.qoder/repowiki/zh/content/: 元数据网关.md  原生功能集成.md  安全考虑.md  导航系统.md  开发指南.md  快速开始.md  性能优化.md  故障排除.md  构建与部署.md  测试策略.md  项目概述.md
.qoder/repowiki/zh/content/播放系统/: 媒体会话集成.md  (+6 more)
.qoder/repowiki/zh/meta/: repowiki-metadata.json
.qoder/specs/: 曲库去重合并率提升_task-d0d.md
app/: build.gradle  lint-baseline.xml  proguard-rules.pro
app/src/debug/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Android.mk  Application.mk  CMakeLists.txt  echo_chromaprint_jni.cpp
artifacts/: source-ingestor-library-window.xml
artifacts/emulator-db-backup-v23/: echo_next.db
artifacts/room-v20-backup-emulator-5554/: echo_next.db
artifacts/room-v21-post-migration-emulator-5554/: echo_next.db
core/common/: build.gradle
core/designsystem/: build.gradle
core/model/: build.gradle
docs/: APP_ICON_LOCK.md  ARCHITECTURE.md  ARCHITECTURE_REMEDIATION_EXECUTION_PLAN_2026-06-27.md  ARCHITECTURE_REMEDIATION_EXECUTION_SUMMARY_2026-06-27.md  ARCHITECTURE_REMEDIATION_PLAN_2026-06-26.md  ARCHITECTURE_STABILIZATION_PIVOT_2026-06-27.md  AUDIO_OUTPUT_BASELINE_2026-07-22.md  CLAUDE_HANDOFF_STREAMING_VIEWMODEL_2026-06-19.md  CODEX_HANDOFF.md  CODEX_HANDOFF_2026-06-18.md  CODEX_MODULARIZATION_HANDOFF_2026-06-28.md  CODEX_MODULARIZATION_HANDOFF_PHASE2_2026-06-28.md  CODEX_SERVICE_SLIMMING.md  CODE_REVIEW_BUG_OPTIMIZATION_BACKLOG_2026-07-07.md  CODE_REVIEW_BUG_OPTIMIZATION_BACKLOG_2026-07-22.md  DATABASE_MIGRATIONS.md  DEVICE_REGRESSION_MATRIX.md  IDENTITY_ACCEPTANCE_BASELINE.md  LOCAL_AUDIO_FORMAT_SUPPORT.md  MATURITY_ROADMAP.md  MOJIBAKE_AUDIT.md  MVVM_MIGRATION_HANDOFF.md  MVVM_MIGRATION_PLAN.md  PLAYBACK_P0_BASELINE_2026-06-29.md  PLAYBACK_SERVICE_STABILITY_MATRIX.md  RELEASE_EXPERIENCE_CHECKLIST.md  STREAMING_VIEWMODEL_SPLIT_PLAN.md  TASK_3_UNIFIED_PLAYBACK_STATE_ANALYSIS.md  TMP_MUSIC_SCHEDULING_ANALYSIS.md  UNIFIED_IDENTITY_RELEASE_HANDOFF_2026-07-16.md  UNIFIED_IDENTITY_STAGE0_AUDIT_2026-07-16.md
docs/archive/: ARCHITECTURE_REMEDIATION_EXECUTION_SUMMARY_2026-06-27.md  ARCHITECTURE_STABILIZATION_PIVOT_2026-06-27_NOTE.md  CLAUDE_HANDOFF_2026-06-18.md  CODEX_HANDOFF_2026-06-23.md  CODEX_HANDOFF_2026-06-23_REVISED.md  MVVM_MIGRATION_PLAN.md  MVVM_MIGRATION_PROGRESS_2026-06-25.md  TASK_5_LIBRARY_ACTION_TYPED_REPORT.md
feature/data/: build.gradle
feature/data/schemas/app.yukine.data.room.YukineDatabase/: 15.json  16.json  17.json  18.json  19.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json
feature/library-ui/: build.gradle
feature/navigation/: build.gradle
feature/playback/: build.gradle
feature/playback/src/main/cpp/: CMakeLists.txt  usb_iso_jni.cpp
feature/playback/src/main/rust/: Cargo.toml  build.rs  rust-toolchain.toml
feature/playback/src/main/rust/shim/: libusb_shim.c
feature/playback/src/main/rust/src/: android.rs  lib.rs  protocol.rs
feature/playback/src/main/rust/src/android/: ffi.rs
feature/player-ui/: build.gradle
feature/settings-ui/: build.gradle
feature/streaming/: build.gradle
feature/streaming-ui/: build.gradle
feature/streaming/schemas/app.yukine.streaming.cache.StreamingCacheDatabase/: 1.json
feature/together/: build.gradle  consumer-rules.pro
feature/ui-common/: build.gradle
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
metadata-gateway/: README.md  compose.yaml  openapi.json  package-lock.json  package.json  tsconfig.json  wrangler.toml
metadata-gateway/src/: core.ts  index.ts
metadata-gateway/src/contracts/: upstream.ts  v2.ts
metadata-gateway/src/node/: config.ts
metadata-gateway/src/providers/: endpoints.ts  manager.ts  requests.ts  types.ts
metadata-gateway/src/providers/adapters/: netease.ts  qqmusic.ts
metadata-gateway/test/: core.test.ts
scripts/: p0-stability-gate.ps1  playback-stability-smoke.ps1  verify-release.ps1
tmp/: android-home-after-back-ui.xml  android-home-final-ui.xml  android-home-ui.xml  android-library-albums-ui.xml  android-library-back-ui.xml  android-library-downloads-ui.xml  android-library-final-ui.xml  android-library-scrolled-ui.xml  android-library-search-ui.xml  android-library-source-ready-ui.xml  android-library-sources-ui.xml  android-queue-ui.xml  current-ui.xml  library-home-ui.xml  review_completeness_adapter.txt  review_completeness_binding.txt  review_completeness_build.txt  review_completeness_conn.txt  review_completeness_conn2.txt  review_completeness_floating.txt  review_completeness_full.txt  review_completeness_host.txt  review_completeness_kugou.txt  review_completeness_library.txt  review_completeness_lyrics2.txt  review_completeness_mapper.txt  review_completeness_playback.txt  review_completeness_playback_mgr.txt  review_completeness_routes2.txt  review_completeness_settings.txt  review_completeness_settings_app.txt  review_completeness_settings_factory.txt  review_completeness_settings_ui.txt  review_completeness_settings_ui2.txt  review_completeness_settings_vm.txt  review_completeness_snapshot.txt  review_completeness_tests.txt  review_diff_current.txt  review_diff_data.txt  review_diff_gradle.txt  (+53 more)
tools/: build_junto_mobile.ps1
ux-audit/novice-mumu-2026-07-16/: report.md
web-prototype/: .npmrc  AGENTS.md  design-qa.md  package-lock.json  package.json
web-prototype/src/: App.jsx  styles.css
(+2050 files in other folders)
