[package]
name = "echo-usb-iso-rust"
version = "0.1.0"
edition = "2021"
rust-version = "1.86"
publish = false

[lib]
name = "echo_usb_iso_rust"
crate-type = ["cdylib"]

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21.1", default-features = false }
libc = "0.2.172"

[build-dependencies]
cc = "1.2.22"
